test/files/neg/bug591.check
bug591.scala:38: error: method input_= is defined twice
    def input_=(in : Input) = {}
        ^
one error found
